[package]
name = "os_flagged"

version = "0.1.0"
authors = ["Band Protocol <dev@bandprotocol.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
owasm-kit = { version = "0.2.2" }
obi = { version = "0.0.2" }
hex = { version = "0.4.3" }

[profile.release]
lto = true
